# novapdfeditor

./: .replit  capacitor.config.ts  compress_pdf.py  doc_converter.py  doc_converter_all.py  package-lock.json  package.json  pdf_compressor.py  pyproject.toml  qpdf_compressor.py  scan_to_pdf.py  theme.json
